# src/frontend/openapi.json
@@ -421,6 +421,235 @@
                 "deprecated": false
             }
         },
+        "/api/game/status": {
+            "get": {
+                "tags": [
+                    "Game"
+                ],
+                "summary": "GetGameStatus",
+                "operationId": "ApiGameStatusGetGameStatus",
+                "responses": {
+                    "200": {
+                        "description": "Request fulfilled, document follows",
+                        "headers": {},
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GameStatus"
+                                }
+                            }
+                        }
+                    }
+                },
+                "deprecated": false
+            }
+        },
+        "/api/game/scan-qr": {
+            "post": {
+                "tags": [
+                    "Game"
+                ],
+                "summary": "ScanQrCode",
+                "operationId": "ApiGameScanQrScanQrCode",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/QRScanRequest"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "201": {
+                        "description": "Document created, URL follows",
+                        "headers": {}
+                    },
+                    "400": {
+                        "description": "Bad request syntax or unsupported method",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status_code": {
+                                            "type": "integer"
+                                        },
+                                        "detail": {
+                                            "type": "string"
+                                        },
+                                        "extra": {
+                                            "additionalProperties": {},
+                                            "type": [
+                                                "null",
+                                                "object",
+                                                "array"
+                                            ]
+                                        }
+                                    },
+                                    "type": "object",
+                                    "required": [
+                                        "detail",
+                                        "status_code"
+                                    ],
+                                    "description": "Validation Exception",
+                                    "examples": [
+                                        {
+                                            "status_code": 400,
+                                            "detail": "Bad Request",
+                                            "extra": {}
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                },
+                "deprecated": false
+            }
+        },
+        "/api/game/start": {
+            "post": {
+                "tags": [
+                    "Game"
+                ],
+                "summary": "StartGame",
+                "operationId": "ApiGameStartStartGame",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/GameStartRequest"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "201": {
+                        "description": "Document created, URL follows",
+                        "headers": {},
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GetEvent"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request syntax or unsupported method",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status_code": {
+                                            "type": "integer"
+                                        },
+                                        "detail": {
+                                            "type": "string"
+                                        },
+                                        "extra": {
+                                            "additionalProperties": {},
+                                            "type": [
+                                                "null",
+                                                "object",
+                                                "array"
+                                            ]
+                                        }
+                                    },
+                                    "type": "object",
+                                    "required": [
+                                        "detail",
+                                        "status_code"
+                                    ],
+                                    "description": "Validation Exception",
+                                    "examples": [
+                                        {
+                                            "status_code": 400,
+                                            "detail": "Bad Request",
+                                            "extra": {}
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                },
+                "deprecated": false
+            }
+        },
+        "/api/game/stop": {
+            "post": {
+                "tags": [
+                    "Game"
+                ],
+                "summary": "StopGame",
+                "operationId": "ApiGameStopStopGame",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/GameStopRequest"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "201": {
+                        "description": "Document created, URL follows",
+                        "headers": {},
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GetEvent"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request syntax or unsupported method",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status_code": {
+                                            "type": "integer"
+                                        },
+                                        "detail": {
+                                            "type": "string"
+                                        },
+                                        "extra": {
+                                            "additionalProperties": {},
+                                            "type": [
+                                                "null",
+                                                "object",
+                                                "array"
+                                            ]
+                                        }
+                                    },
+                                    "type": "object",
+                                    "required": [
+                                        "detail",
+                                        "status_code"
+                                    ],
+                                    "description": "Validation Exception",
+                                    "examples": [
+                                        {
+                                            "status_code": 400,
+                                            "detail": "Bad Request",
+                                            "extra": {}
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                },
+                "deprecated": false
+            }
+        },
         "/api/questions/{question_id}": {
             "get": {
                 "tags": [
@@ -1375,6 +1604,62 @@
     },
     "components": {
         "schemas": {
+            "GameStartRequest": {
+                "properties": {
+                    "event_id": {
+                        "type": "integer"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "event_id"
+                ],
+                "title": "GameStartRequest"
+            },
+            "GameStatus": {
+                "properties": {
+                    "user_status": {
+                        "$ref": "#/components/schemas/UserStatus"
+                    },
+                    "qr_code": {
+                        "oneOf": [
+                            {
+                                "type": "string"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ]
+                    },
+                    "partner_name": {
+                        "oneOf": [
+                            {
+                                "type": "string"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ]
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "user_status"
+                ],
+                "title": "GameStatus"
+            },
+            "GameStopRequest": {
+                "properties": {
+                    "event_id": {
+                        "type": "integer"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "event_id"
+                ],
+                "title": "GameStopRequest"
+            },
             "GetEvent": {
                 "properties": {
                     "id": {
@@ -1711,13 +1996,20 @@
                         "type": "string",
                         "maxLength": 64,
                         "minLength": 1
+                    },
+                    "user_answer": {
+                        "items": {
+                            "$ref": "#/components/schemas/PostUserAnswer"
+                        },
+                        "type": "array"
                     }
                 },
                 "type": "object",
                 "required": [
                     "email",
                     "event_code",
-                    "name"
+                    "name",
+                    "user_answer"
                 ],
                 "title": "PostUser"
             },
@@ -1737,6 +2029,19 @@
                     "question_id"
                 ],
                 "title": "PostUserAnswer"
+            },
+            "QRScanRequest": {
+                "properties": {
+                    "qr_code": {
+                        "type": "string",
+                        "minLength": 1
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "qr_code"
+                ],
+                "title": "QRScanRequest"
             },
             "UserStatus": {
                 "type": "string",
